--- a/_includes/preview-post.html
+++ b/_includes/preview-post.html
@@ -3,6 +3,7 @@
         background-image: url("{{ site.baseurl }}/assets/posts/{{ include.post.date | split: ' ' | first }}-{{ include.post.slug }}.jpeg");
     }
 
+    /* move to common css */
     .post-preview {
         width: 100%;
         height: 100%;
