--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -2,7 +2,7 @@
   .grid-container {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    /* grid-template-rows: auto auto auto auto; */
+    grid-template-rows: repeat(4, minmax(0, 1fr));
     gap: .5em;
     /* background-color: #999; */
     /* padding: .5em; */
@@ -24,7 +24,7 @@
   .grid-container>.vertical {
     grid-column: span 1;
     grid-row: span 2;
-    aspect-ratio: 1/2;
+    /* aspect-ratio: 1/2; */
   }
 </style>
 
