--- a/_includes/preview-short.html
+++ b/_includes/preview-short.html
@@ -4,24 +4,25 @@
     }
 
     /* move to common css */
-    .post-thumbnail {
+    .post-preview {
         width: 100%;
         height: 100%;
-        /* TODO: default image */
-        /* background-image: url("/assets/posts/{{ include.post.date | split: ' ' | first }}-{{ include.post.slug }}.jpeg"); */
         background-size: cover;
         background-position: center;
         padding: 1px;
-        color: white
+        color: white;
+
+        position: relative;
     }
 </style>
 
-{% if include.post.short %}
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/{{include.post.short}}"
-    title="YouTube video player" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-</iframe>
-{% else %}
-<div class="post-thumbnail"  id="{{ include.post.slug }}"></div>
-{% endif %}
+<div class="post-preview" id="{{ include.post.slug }}">
+    {% include post-identifier.html post=post %}
+    {% if include.post.short %}
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/{{include.post.short}}"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
+    {% endif %}
+</div>
