--- a/_includes/preview-short.html
+++ b/_includes/preview-short.html
@@ -14,15 +14,25 @@
 
         position: relative;
     }
+    
+    .post-preview-link {
+        position: absolute;
+        cursor: pointer;
+        height: 100%;
+        width: 100%;
+    }
 </style>
 
 <div class="post-preview" id="{{ include.post.slug }}">
+    <div class="post-preview-link" onclick="location.href='{{site.baseurl}}{{include.post.url}}'"></div>
     {% include post-identifier.html post=post %}
-    {% if include.post.short %}
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/{{include.post.short}}"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-    </iframe>
-    {% endif %}
+    <div class="post-preview-body">
+        {% if include.post.short %}
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/{{include.post.short}}"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+        {% endif %}
+    </div>
 </div>
