--- a/_layouts/short.html
+++ b/_layouts/short.html
@@ -5,11 +5,7 @@ layout: site-grandeur
 <h1>{{ page.title }}</h1>
 
 {% if page.short %}
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/{{page.short}}"
-    title="YouTube video player" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-</iframe>
+{% include embed-youtube.html id=page.short aspect="vertical" %} 
 {% elsif page.tiktok %}
 <script async src="https://www.tiktok.com/embed.js"></script>
 <blockquote class="tiktok-embed" 
