--- a/_layouts/site-grandeur.html
+++ b/_layouts/site-grandeur.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Coda">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/grandeur.css">
+    <!-- todo: mover a file propio -->
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/layout.css">
     <!-- TODO: favicon -->
     <!-- TODO: SEO -->
 </head>
