--- a/_includes/preview-post.html
+++ b/_includes/preview-post.html
@@ -5,11 +5,13 @@
 </style>
 
 <div class="post-preview" id="{{include.post.slug}}">
+    {% if include.detailed %}
     <div class="post-preview-fade"></div>
     <div class="post-preview-body">
         <h2>{{ include.post.title }}</h2>
         <p>{{ include.post.excerpt | markdownify }}</p>
     </div>
+    {% endif %}
     <!-- TODO: play button para shorts -->
     <div class="post-preview-link" onclick="location.href='{{site.baseurl}}{{include.post.url}}'"></div>
     {% include post-identifier.html post=post %}
