--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -44,6 +44,7 @@
     width: 100%;
     background-image: linear-gradient(45deg, var(--sky-colour), transparent);
     padding: .5em;
+    cursor: pointer;
 }
 
 .post-identifier-date {
