--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,4 +1,3 @@
-/* move to common css */
 .post-preview {
     width: 100%;
     height: 100%;
@@ -49,4 +48,23 @@
 
 .post-identifier-date {
     font-size: 1.5em;   
+}
+
+.itchio {
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    aspect-ratio: 16/9;
+    text-align: center;
+    position: relative;
+}
+
+.itchio>.button{
+    background-color: var(--sky-colour);
+    padding: .5em;
+
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
 }
