--- a/assets/css/grandeur.css
+++ b/assets/css/grandeur.css
@@ -24,16 +24,9 @@
     --sky-colour-bottom-facing: hsl(var(--sky-colour-hue) 50% 55%);
 }
 
-wrapper {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    justify-content: flex-start;
-
-    font-family: "Coda";
-}
-
 body {
+    /* min-height: 100vh; */
+    font-family: "Coda";
     margin: 0;
     background-color: var(--sky-colour);
 }
@@ -113,13 +106,13 @@ mesh {
 }
 
 .h1-no-margin {
-    font-size: calc(var(--front-cube-width) * .3);
+    font-size: 10em;
     line-height: .9em;
     font-weight: bolder;
 }
 
 .h2-no-margin {
-    font-size: min(5em, calc(var(--front-cube-width) * .16));
+    font-size: 4em;
     line-height: 1.5em;
 }
 
@@ -194,13 +187,15 @@ a {
 
     color: ghostwhite;
     /* align-self: center; */
+    margin: auto;
+    /* font-size: 32px */
 }
 
 @media screen and (min-width: 1200px) {
     .content {
         font-size: 1.5em;
-        width: 55em;
-        margin: auto;
+        max-width: 55em;
+        /* margin: auto; */
     }
 }
 
