--- a/_layouts/post-base.html
+++ b/_layouts/post-base.html
@@ -2,7 +2,10 @@
 layout: site-grandeur
 ---
 
-{% include breadcrumbs.html categories=page.categories tags=page.tags %}
+<div class="post-header">
+    {% include breadcrumbs.html categories=page.categories tags=page.tags %}
+    <div class="post-date">{{ page.date | split: ' ' | first }}</div>
+</div>
 <h1 style="margin-top: 0;">{{ page.title }}</h1>
 
 {{ content }}
