--- a/_layouts/site-grandeur.html
+++ b/_layouts/site-grandeur.html
@@ -6,6 +6,8 @@
     <title>Julian Blane</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Coda">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@24,400,1,0" />
+
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/grandeur.css">
     <!-- todo: mover a file propio -->
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/layout.css">
