post preview styling

--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,4 +1,4 @@
 <!-- TODO: why does the font-size change depending on where it is included? -->
 <div class="nav-breadcrumbs">
-    <a href="{{site.baseurl}}/{{ include.categories | join: '/' }}">{{include.categories | join: ' / ' }}</a> / {{include.tags | join: ' / ' }}
+    <a href="{{site.baseurl}}/{{ include.categories | join: '/' }}">{{include.categories | join: ' / ' }}</a> / {{include.tags | join: ' / ' }} /
 </div> 
