--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,6 +2,6 @@
 layout: site-grandeur
 ---
 
-<h1>{{ page.title }}</h1>
+<h1 class="no-margin-top">{{ page.title }}</h1>
 
 {% include gallery.html posts=page.posts %}
