--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,3 +1,8 @@
+.no-margin-top {
+    margin-top: 0;
+}
+
+/* post preview */
 .post-preview {
     width: 100%;
     height: 100%;
@@ -64,6 +69,12 @@
     justify-content: space-between;
     color: var(--sky-colour-bottom-facing);
 }
+
+.post-date {
+    text-align: end;
+}
+
+/* itchio */
 
 .itchio {
     background-size: cover;
