--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -150,10 +150,17 @@
 .grid-container {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    grid-template-rows: repeat(4, minmax(0, 1fr));
+    grid-auto-rows: 1fr;
     gap: .5em;
     /* background-color: #999; */
     /* padding: .5em; */
+}
+
+/* add an invisible element to enforce proportions */
+.grid-container::after {
+    content: '';
+    width: 0;
+    padding-bottom: 100%;
 }
 
 .grid-container>div {
@@ -166,13 +173,11 @@
 .grid-container>.square {
     grid-column: span 2;
     grid-row: span 2;
-    aspect-ratio: 1;
 }
 
 .grid-container>.vertical {
     grid-column: span 1;
     grid-row: span 2;
-    /* aspect-ratio: 1/2; */
 }
 
 /* short page */
