copy changes to short post and footer

--- a/_layouts/post-short.html
+++ b/_layouts/post-short.html
@@ -8,7 +8,7 @@ layout: post-base
 {% include embed-tiktok.html username=page.username tiktok=page.tiktok %} 
 {% endif %}
 
-Ver mas en:
+Dale like y seguime en:
 <div class="short-links">
     {% if page.short %}
     <a href="https://www.youtube.com/shorts/{{ page.short }}">
