--- a/_layouts/site-grandeur.html
+++ b/_layouts/site-grandeur.html
@@ -51,7 +51,7 @@
     </div>
     <footer>
         <div class="author">
-            2024 Julián Benegas Lane
+            2024 Julian Blane
         </div>
         <div class="links">
             <!-- TODO: links -->
