--- a/_layouts/post-base.html
+++ b/_layouts/post-base.html
@@ -2,7 +2,7 @@
 layout: site-grandeur
 ---
 
-<div class="post-header">
+<div class="post-header" id="content">
     {% include breadcrumbs.html categories=page.categories tags=page.tags %}
     <div class="post-date">{{ page.date | split: ' ' | first }}</div>
 </div>
