--- a/_layouts/site-grandeur.html
+++ b/_layouts/site-grandeur.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@24,400,1,0" />
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/grandeur.css">
-    <!-- todo: mover a file propio -->
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/layout.css">
-    <!-- TODO: favicon -->
-    <!-- TODO: SEO -->
+    <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico">
+    {% seo %}
 </head>
 
 <body>
