--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,6 +2,10 @@
 layout: site-grandeur
 ---
 
-<h1 class="no-margin-top">{{ page.title }}</h1>
+<head>
+    <title>{{ page.short_title | capitalize }} | {{ site.title }}</title>
+</head>
+
+<h1 class="no-margin-top">{{ page.short_title | capitalize }}</h1>
 
 {% include gallery.html posts=page.posts %}
