--- a/_layouts/site-grandeur.html
+++ b/_layouts/site-grandeur.html
@@ -3,15 +3,13 @@
 <html>
 
 <head>
-    <title>Julian Blane</title>
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Coda">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@24,400,1,0" />
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/grandeur.css">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/layout.css">
     <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico">
-    {% seo %}
+    {% seo title=false %}
 </head>
 
 <body>
