--- a/_layouts/site-grandeur.html
+++ b/_layouts/site-grandeur.html
@@ -18,13 +18,12 @@
             <face class="cube-face bottom"></face>
             <face class="cube-face front">
                 <div class="absolute-bottom-left">
-                    <h1 class="h h1-no-margin button" onclick="location.href='{{site.baseurl}}/'">JULIAN BLANE</h1>
+                    <a href="{{site.baseurl}}/"><h1 class="h h1-no-margin button">JULIAN BLANE</h1></a>
                 </div>
             </face>
             <face class="cube-face right">
                 <div class="absolute-bottom-right text-align-right">
-                    <p class="h h2-no-margin button"
-                        data-href=#todo >TODO: titles</p>
+                    <a href=#todo class="h h2-no-margin button">TODO: titles</a>
                 </div>
             </face>
         </mesh>
