--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -55,8 +55,7 @@ footer > div {
 .post-preview-link {
     position: absolute;
     cursor: pointer;
-    height: 100%;
-    width: 100%;
+    inset: 0;
 }
 
 .post-preview-link,
@@ -93,10 +92,12 @@ footer > div {
     text-align: left;
     position: absolute;
     bottom: 0;
-    width: 100%;
+    left: 0;
+    right: 0;
     background-image: linear-gradient(45deg, var(--sky-colour), transparent);
     padding: .5em;
     cursor: pointer;
+    color: ghostwhite;
 }
 
 .post-identifier-date {
