--- a/_layouts/post-release.html
+++ b/_layouts/post-release.html
@@ -4,7 +4,7 @@ layout: post-base
 
 <style>
     #{{ page.slug }} {
-        background-image: url("{{ site.baseurl }}/assets/posts/{{ page.date | split: ' ' | first }}-{{ page.slug }}.jpeg");
+        background-image: url("{{ page.image }}");
     }
 </style>
 
