--- a/_layouts/post-base.html
+++ b/_layouts/post-base.html
@@ -3,7 +3,7 @@ layout: site-grandeur
 ---
 
 <head>
-    <title>{{ page.categories.last | capitalize }}: {{ page.short_title }} | {{ site.title }}</title>
+    <title>{{ page.project.name }}: {{ page.short_title }} | {{ site.title }}</title>
 </head>
 
 <div class="post-header" id="content">
