--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,9 +3,9 @@ layout: site-grandeur
 ---
 
 <head>
-    <title>{{ page.short_title | capitalize }} | {{ site.title }}</title>
+    <title>{{ page.short_title }} | {{ site.title }}</title>
 </head>
 
-<h1 class="no-margin-top">{{ page.short_title | capitalize }}</h1>
+<h1 class="no-margin-top">{{ page.short_title }}</h1>
 
 {% include gallery.html posts=page.posts %}
