social links and project images

--- a/_layouts/site-grandeur.html
+++ b/_layouts/site-grandeur.html
@@ -50,7 +50,9 @@
             2024 Julian Blane
         </div>
         <div class="links">
-            <!-- TODO: links -->
+            <a href="https://www.youtube.com/@julianblane"><img src="{{ site.baseurl }}/assets/external/logos/yt-mono-dark-icon.png" style="height: 1em;" alt="youtube"></a>
+            <a href="https://www.tiktok.com/@julianblane"><img src="{{ site.baseurl }}/assets/external/logos/tiktok-mono-dark-icon.png" style="height: 1em;" alt="tiktok"></a>
+            <a href="https://www.instagram.com/julianblane.dev/"><img src="{{ site.baseurl }}/assets/external/logos/ig-mono-dark.png" style="height: 1em;" alt="instagram"></a>
         </div>
     </footer>
 </body>
