--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -3,6 +3,17 @@ body {
     position: relative;
 }
 
+/* content */
+.content {
+    font-size: 2em;
+}
+
+@media screen and (min-width: 1024px) {
+    .content {
+        font-size: 1.5em;
+    }
+}
+
 .content {
     padding-bottom: 6em;
 }
@@ -24,9 +35,9 @@ footer {
     margin-top: auto;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1024px) {
     footer {
-        font-size: 1.25em;
+        font-size: 1em;
     }
 }
 
@@ -102,10 +113,24 @@ footer > .links > a > img {
     padding: .5em;
     cursor: pointer;
     color: ghostwhite;
+
+    font-size: 1em;
+}
+
+@media screen and (min-width: 1024px) {
+    .post-identifier {
+        font-size: .75em;
+    }
 }
 
 .post-identifier-date {
     font-size: 1.5em;
+}
+
+@media screen and (min-width: 1024px) {
+    .post-identifier-date {
+        font-size: 1.25em;
+    }
 }
 
 .post-header {
@@ -196,8 +221,13 @@ footer > .links > a > img {
     grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-auto-rows: 1fr;
     gap: .5em;
-    /* background-color: #999; */
-    /* padding: .5em; */
+}
+
+
+@media screen and (min-width: 1024px) {
+    .grid-container {
+        grid-template-columns: repeat(6, minmax(0, 1fr));
+    }
 }
 
 /* add an invisible element to enforce proportions */
@@ -219,7 +249,6 @@ footer > .links > a > img {
 .grid-container>div {
     background-color: rgba(255, 255, 255, 0.8);
     text-align: center;
-    /* font-size: 30px; */
     overflow: hidden;
 }
 
