fill the empty space on the header for landscape viewports

--- a/_layouts/site-grandeur.html
+++ b/_layouts/site-grandeur.html
@@ -14,18 +14,24 @@
 
 <body>
     <div class="stage">
-        <mesh class="cube">
+        <mesh class="cube cube-primary">
             <face class="cube-face bottom"></face>
-            <face class="cube-face front">
+            <face class="cube-face left">
                 <div class="absolute-bottom-left">
                     <a href="{{site.baseurl}}/"><h1 class="h h1-no-margin button">JULIAN BLANE</h1></a>
                 </div>
             </face>
-            <face class="cube-face right">
+            <face class="cube-face front">
                 <div class="absolute-bottom-right text-align-right">
                     <a href=#todo class="h h2-no-margin button">TODO: titles</a>
                 </div>
             </face>
+        </mesh>
+
+        <mesh class="cube cube-secondary">
+            <face class="cube-face bottom"></face>
+            <face class="cube-face front"></face>
+            <face class="cube-face right"></face>
         </mesh>
 
         <div class="sky-edge">
